--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Gavin Huang
 logo: /assets/img/headshot_circle.png
-show_downloads: false
+# show_downloads: false
 theme: jekyll-theme-minimal
